--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+# »’÷æ
+logging.file=/tomcat-log/logs/all.log
+logging.level.com.yd.web.controller = info
+logging.level.com.yd.web.mapper = debug
+
+#adminº‡øÿ
+spring.boot.admin.url=http://localhost:8090
