--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,20 @@
         </dependency>
         <!-- ============   swagger2 end  ============  -->
 
+        <!-- ============   指标监控 begin  ============  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- ============   指标监控 end  ============  -->
+
+        <!-- ============   指标监控-web begin  ============  -->
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- ============   指标监控-web end  ============  -->
 
         <dependency>
             <groupId>com.google.guava</groupId>
